--- a/src/app/modules/search/result/result.scss
+++ b/src/app/modules/search/result/result.scss
@@ -7,10 +7,12 @@
   margin-top:1em;
 
   .search-result-item {
+    padding-top: 1em;
     width: 18em;
     height: 22em;
     float: left;
     margin: 0 -1px -1px 0;
+    position: relative;
 
     img {
       clear: both;
@@ -24,7 +26,8 @@
     }
   }
   .search-result-item-count {
-    float: right;
+    position: absolute;
+    right: 1em;
     height: 25px;
     width: 25px;
     border-radius: 25px;
